fix(cloud): hidai25 broken tests/typecheck
